# resume-tool

./: .env.example  .gitignore  CLAUDE.md  COMPONENTS.md  README.md  WORKFLOW.md  cookiecutter.json  index.html  package-lock.json  package.json  requirements.md.example  requirements.txt  tsconfig.tsbuildinfo  vercel.json
.claude/: settings.json
.claude/commands/: adopt.md  doctor.md  implement-all.md  init-project.md  jira-task.md  review.md  setup.md  ui-components.md
.github/workflows/: auto-review.yml  claude.yml  slack-notifications.yml
api/: customize.ts  fetch-posting.ts  parse-email.ts  parse-posting.ts  refine-resume.ts  research.ts  search-jobs.ts
docs/: ADMIN_SETUP.md  ONBOARDING.md  shared-components-packaging.md
hooks/: post_gen_project.py  pre_gen_project.py
kanban/: package-lock.json  package.json
kanban/src/: App.css  App.jsx  index.css
scripts/: hello.sh  search-jobs.py  vercel-install.sh
src/: App.tsx  declarations.d.ts  main.tsx  types.d.ts
src/components/: ActivityTimeline.tsx  ApplicationCard.tsx  ApplicationList.tsx  GmailSync.tsx  JobPostingInput.tsx  JobSearch.tsx  JobSearchResultCard.tsx  Layout.tsx  ResearchPanel.tsx  (+2 more)
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  requirements.md.example
{{cookiecutter.project_slug}}/backend-python/: pyproject.toml
{{cookiecutter.project_slug}}/backend-python/app/: __init__.py
{{cookiecutter.project_slug}}/backend-python/app/routes/: todos.py
{{cookiecutter.project_slug}}/backend-python/tests/: test_todos.py
(+39 files in other folders)
